# delegate-reknew

./: pyproject.toml  reknew.yaml
reknew/: cli.py  config.py  daemon.py  main.py  state.py
reknew-build-specs/: .cursorrules  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  setup-reknew.sh
reknew-build-specs/.github/: copilot-instructions.md
reknew-build-specs/specs/: phase2-llm-adapters.md  phase3-github-reactions.md
reknew/adapters/: base_adapter.py  claude_adapter.py  codex_adapter.py  gemini_adapter.py
reknew/agents/: monitor.py  spawner.py
reknew/connectors/: github_connector.py
reknew/dashboard/: api.py  websocket.py
reknew/dashboard/frontend/: index.html
reknew/github/: api.py  pr_manager.py  webhook_listener.py
reknew/orchestration/: capacity_router.py  dependency.py  task_breakdown.py  task_state.py
reknew/reactions/: ci_handler.py  engine.py  review_handler.py
reknew/spec/: openspec_bridge.py
specs/: phase1-issue-connector.md  phase4-dashboard.md
tests/: test_capacity_router.py  test_config.py  test_dashboard_api.py  test_dependency.py  test_github_connector.py  test_main.py  test_openspec_bridge.py  test_pr_manager.py  test_reactions.py  test_task_breakdown.py  test_task_state.py
