[project]
name = "delegate-ai"
version = "0.2.9"
description = "Agentic team management system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.36",
    "click>=8.1",
    "fastapi>=0.128.4",
    "filetype>=1.2.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.40.0",
    "watchfiles>=1.0.0",
    "PyGithub>=2.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["delegate", "reknew"]

# Force-include frontend build output — it's gitignored (generated at
# build time by the custom hook below) but must ship inside the wheel.
[tool.hatch.build.targets.wheel.force-include]
"delegate/static" = "delegate/static"

# Run frontend build (esbuild) before creating the wheel
[tool.hatch.build.hooks.custom]

[project.scripts]
delegate = "delegate.cli:main"
reknew = "reknew.cli:main"

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=9.0.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["llm: tests that call live LLM APIs (run with --run-llm)"]
