[project]
name = "reknew-sdlc"
version = "0.1.0"
description = "ReKnew AI-SDLC Platform — capacity management layer for AI coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # Delegate's existing deps are inherited from its pyproject.toml
    # These are ReKnew-specific additions:

    # GitHub API
    "PyGithub>=2.3.0",

    # HTTP server + WebSockets
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",

    # Config
    "pyyaml>=6.0.2",

    # Anthropic SDK (for task breakdown LLM calls)
    "anthropic>=0.40.0",

    # HTTP client (for webhook listener, JIRA API)
    "httpx>=0.27.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "respx>=0.21.0",     # Mock httpx requests in tests
]

[project.scripts]
reknew = "reknew.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
